spacing fixes

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -26,9 +26,14 @@ header nav {
     text-align: right;
 }
 
+header nav a {
+    font-size: 0.85rem;
+    margin-left: 10px;
+}
+
 .logo {
     font-weight: 600;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 nav a {
